--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@ body {
 
 .card {
     background: #ffffff;
+    border-radius: 10px;
+    -moz-box-shadow: 3px 3px 14px 0px rgba(27,43,63,0.64);
+    box-shadow: 3px 3px 14px 0px rgba(27,43,63,0.64);
     width: 360px;
     height: auto;
-    margin: 15px 0;
 }
 
 .thumbnail {
